--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Hamza Khan",
   "license": "Apache-2.0",
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "@vercel/edge-config": "^1.2.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
